k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
