k8s/jarvis-auth-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jarvis-auth-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/jarvis-auth-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/jarvis-auth-default: "true"
